PrismTech JAC#533 Performance improvements, refactoring some code to allow delayed init.